# mock-query-data

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
src/: http.rs  lib.rs  websocket.rs
tests/: test_logic.rs
